<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Test DPC</string>
    <string name="setup_app_name">Set up Test DPC</string>
    <string name="cancel">Cancel</string>
    <string name="set_up_managed_profile">Set up managed profile</string>
    <string name="set_up_device_owner">Set up device owner</string>
    <string name="set_up_management_header">Set up management</string>
    <string name="setup_management_message">This app is currently not the owner of this device or
        profile. Please select an option below and tap Next to set up appropriate management by this app.</string>
    <string name="setup_management_message_for_do">This app is currently set as device owner. Please select the options below and tap Next to create a profile managed by the same app</string>
    <string name="provisioning_not_possible">TestDPC isn\'t currently allowed to be set up as the profile or device owner.</string>
    <string name="provisioning_not_possible_for_do">TestDPC isn\'t currently allowed to create a managed profile.</string>
    <string name="exit">Exit</string>
    <string name="managed_account_message">Added account that requires management:</string>
    <string name="managed_account_complete_message">Added account that is now managed:</string>
    <string name="account_migration_failed_message">Account failed to migrate:</string>
    <string name="add_account_later_message">Please add the account later.</string>
    <string name="setup_label">Set up</string>
    <string name="profile_name">Sample Managed Profile</string>
    <string name="skip_user_setup">Skip user setup</string>
    <string name="skip_user_consent">Skip user consent during provisioning</string>
    <string name="keep_account_migrated">Keep account on this user, if migrated</string>
    <string name="skip_encryption">Skip encryption</string>
    <string name="managed_profile_name">Sample Managed Profile</string>
    <string name="managed_user_name">Sample Managed User</string>
    <string name="finish_setup">Finish setup</string>
    <string name="finish_setup_account_not_ready">Finish setup but account might not be ready</string>
    <string name="setup_finished">Setup finished</string>
    <string name="click_finish_to_complete">Click Finish to complete setup.</string>
    <string name="waiting_for_first_account_check_in">Putting finishing touches</string>
    <string name="finish_button">Finish</string>
    <string name="all_done">Setup finished successfully</string>
    <string name="all_done_explanation_profile_owner">To manage the new managed profile, visit the
        badged version of this application.
    </string>
    <string name="all_done_explanation_device_owner">To manage the device open this application.
    </string>
    <string name="add_account_title">Provisioning finished successfully</string>
    <string name="add_account_explanation">To add an account, select the corresponding option below. Select skip if you want to add it later:
    </string>
    <string name="managed_profile_specific_policy_category_title">Managed profile policies</string>
    <string name="managed_profile_specific_policy_title">Managed work profile specific policies
    </string>
    <string name="device_owner_management">Device owner management</string>
    <string name="wipe_data">Wipe data</string>
    <string name="remove_device_owner">Remove this device owner</string>
    <string name="reboot">Reboot device</string>
    <string name="cross_profile_intents">Cross-profile intents</string>
    <string name="add_cross_profile_intents_title">Add cross-profile intents</string>
    <string name="clear_cross_profile_intents">Clear all cross-profile intents</string>
    <string name="camera_title">Camera, screen capture and audio</string>
    <string name="disable_camera">Disable camera</string>
    <string name="capture_image">Capture image</string>
    <string name="capture_video">Capture video</string>
    <string name="disable_screen_capture">Disable screen capture</string>
    <string name="mute_audio">Mute audio</string>
    <string name="profile_management_title">Work profile management</string>
    <string name="removing_managed_profile">Removing work profile</string>
    <string name="cross_profile_widget_providers_title">Cross-profile widget providers</string>
    <string name="add_cross_profile_app_widget_providers">Enable app widgets in a work profile app
    </string>
    <string name="remove_cross_profile_app_widget_providers">Remove app widgets in a work profile
        app
    </string>
    <string name="disable_cross_profile_caller_id">Disable cross-profile caller ID</string>
    <string name="wifi_management_title">WI-FI management</string>
    <string name="create_wifi_configuration">Create WI-FI configuration</string>
    <string name="enable_wifi_config_lockdown">DO created WI-FI configs are modifiable only by DO</string>
    <string name="modify_wifi_configuration">Modify WI-FI configuration</string>
    <string name="show_wifi_mac_address">Show Wi-Fi MAC address</string>
    <string name="apps_management_title">Apps management</string>
    <string name="enable_system_apps_title">Enable system apps</string>
    <string name="enable_system_apps_by_package_name">Enable a system app by package name</string>
    <string name="enable_system_apps_by_intent">Enable a system app by intent</string>
    <string name="hide_apps_title">Hide apps</string>
    <string name="unhide_apps_title">Unhide apps</string>
    <string name="suspend_apps_title">Suspend apps</string>
    <string name="unsuspend_apps_title">Unsuspend apps</string>
    <string name="lock_task_title">Lock task</string>
    <string name="manage_lock_task">Manage lock task list</string>
    <string name="check_lock_task_permitted">Check lock task permitted</string>
    <string name="start_lock_task">Self-start lock task mode</string>
    <string name="stop_lock_task">Stop lock task mode</string>
    <string name="single_use_devices">Single-use devices</string>
    <string name="disable_status_bar">Disable status bar</string>
    <string name="reenable_status_bar">Reenable status bar</string>
    <string name="disable_keyguard">Disable keyguard</string>
    <string name="reenable_keyguard">Reenable keyguard</string>
    <string name="start_kiosk_mode">Start kiosk mode</string>
    <string name="user_restrictions_preference_title">Set user restrictions</string>
    <string name="user_restrictions_management_title">User restrictions</string>
    <string name="certificate_management_title">Certificate management</string>
    <string name="install_key_certificate">Install a private/public key pair</string>
    <string name="remove_key_certificate">Remove a private/public key pair</string>
    <string name="key_override_alias">Override client certificates with alias</string>
    <string name="certificate_alias_prompt_certificate_name">Certificate name:</string>
    <string name="install_ca_certificate">Install a CA certificate</string>
    <string name="get_ca_certificates">Get a list of CA certificates</string>
    <string name="remove_all_ca_certificates">Remove all CA certificates</string>
    <string name="user_selectability_description">User-selectability</string>
    <string name="user_selectability_checkbox">Make user-selectable</string>
    <string name="ec_key_checkbox">Generate EC key (Default: RSA)</string>
    <string name="key_attestation_description">Key Attestation options</string>
    <string name="key_attestation_checkbox">Include key attestation challenge</string>
    <string name="device_id_attestation_description">Device ID attestation options</string>
    <string name="brand_attestation_checkbox">Include brand attestation only</string>
    <string name="serial_num_attestation_checkbox">Include device serial number</string>
    <string name="imei_attestation_checkbox">Include device IMEI</string>
    <string name="meid_attestation_checkbox">Include device MEID</string>
    <string name="use_strongbox_checkbox">Use StrongBox</string>
    <string name="app_restrictions_managing_package">App restrictions manager</string>
    <string name="manage_cert_installer">Delegated cert installer</string>
    <string name="accessibility_title">Accessibility</string>
    <string name="set_accessibility_services">Set accessibility services</string>
    <string name="input_methods_title">Input methods</string>
    <string name="set_input_methods">Set input methods</string>
    <string name="account_management_title">Account management</string>
    <string name="set_disable_account_management">Toggle account management</string>
    <string name="get_disable_account_management">Get account types with management disabled</string>
    <string name="user_management">User management</string>
    <string name="create_and_initialize_user">Create and initialize user</string>
    <string name="remove_user">Remove user</string>
    <string name="block_uninstallation_title">Block uninstallation</string>
    <string name="block_uninstallation_by_pkg">Block uninstallation by package name</string>
    <string name="block_uninstallation_list">Block uninstallation list</string>
    <string name="system_update_management">System update</string>
    <string name="system_update_policy">Manage system update policy</string>
    <string name="data_usage">Data usage</string>
    <string name="network_stats">Network Data Usage Stats</string>
    <string name="permission_management">Permission management</string>
    <string name="set_default_permission_policy">Get/Set default permission policy</string>
    <string name="manage_app_permissions">Manage app permissions</string>
    <string name="keyguard_features">Keyguard features</string>
    <string name="keyguard_disable_secure_camera">Disable secure camera</string>
    <string name="keyguard_disable_secure_notifications">Disable secure notifications</string>
    <string name="keyguard_disable_unredacted_notifications">Disable unredacted notifications</string>
    <string name="keyguard_disable_trust_agents">Disable trust agents</string>
    <string name="keyguard_disable_fingerprint">Disable fingerprint</string>
    <string name="lock_category">Lock screen</string>
    <string name="maximum_lock_time_category">Max time to screen lock</string>
    <string name="maximum_lock_time_seconds">Max time to screen lock (seconds)</string>
    <string name="maximum_lock_time_all_admins">Max time as set by all/other admins</string>
    <string name="maximum_password_fails">Max password failures for local wipe</string>
    <string name="maximum_password_fails_all_admins">Max failures as set by all/other admins</string>
    <string name="lock_screen_message">Lock screen message</string>
    <string name="password_constraints">Password constraints</string>
    <string name="minimum_password_quality">Minimum password quality</string>
    <string name="password_min_length">Minimum password length</string>
    <string name="password_min_letters">Minimum number of letters</string>
    <string name="password_min_numeric">Minimum number of digits</string>
    <string name="password_min_lowercase">Minimum number of lower-case characters</string>
    <string name="password_min_uppercase">Minimum number of upper-case characters</string>
    <string name="password_min_symbols">Minimum number of symbols</string>
    <string name="password_min_nonletter">Minimum number of non-letters</string>
    <string name="password_expiration">Password expiration</string>
    <string name="password_expiration_seconds">Password expiration (seconds)</string>
    <string name="password_expiration_aggregate">Expiration by all/other admins</string>
    <string name="settings_management_title">Settings management</string>
    <string name="stay_on_while_plugged_in">Keep the device on while plugged in</string>
    <string name="install_non_market_apps">Allow installs from unknown sources</string>
</resources>