<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (C) 2015 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
            android:key="device_owner_status"
            android:selectable="false"/>

    <PreferenceCategory
            android:title="@string/accessibility_title">
        <Preference
                android:key="set_accessibility_services"
                android:title="@string/set_accessibility_services"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/account_management_title">
        <Preference
                android:key="set_disable_account_management"
                android:title="@string/set_disable_account_management"/>
        <Preference
                android:key="get_disable_account_management"
                android:title="@string/get_disable_account_management"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/apps_management_title">
        <Preference
                android:key="enable_system_apps"
                android:title="@string/enable_system_apps_title"/>
        <Preference
                android:key="enable_system_apps_by_package_name"
                android:title="@string/enable_system_apps_by_package_name"/>
        <Preference
                android:key="enable_system_apps_by_intent"
                android:title="@string/enable_system_apps_by_intent"/>
        <Preference
                android:key="hide_apps"
                android:title="@string/hide_apps_title"/>
        <Preference
                android:key="unhide_apps"
                android:title="@string/unhide_apps_title"/>
        <Preference
                android:key="suspend_apps"
                android:title="@string/suspend_apps_title"/>
        <Preference
                android:key="unsuspend_apps"
                android:title="@string/unsuspend_apps_title"/>
        <Preference
                android:key="manage_app_restrictions"
                android:title="@string/manage_app_restrictions"/>
        <Preference
                android:key="app_restrictions_managing_package"
                android:title="@string/app_restrictions_managing_package"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/block_uninstallation_title">
        <Preference
                android:key="block_uninstallation_by_pkg"
                android:title="@string/block_uninstallation_by_pkg"/>
        <Preference
                android:key="block_uninstallation_list"
                android:title="@string/block_uninstallation_list"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/camera_title">
        <SwitchPreference
                android:key="disable_camera"
                android:title="@string/disable_camera"/>
        <Preference
                android:key="capture_image"
                android:title="@string/capture_image"/>
        <Preference
                android:key="capture_video"
                android:title="@string/capture_video"/>
        <SwitchPreference
                android:key="disable_screen_capture"
                android:title="@string/disable_screen_capture"/>
        <SwitchPreference
                android:key="mute_audio"
                android:title="@string/mute_audio"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/certificate_management_title">
        <Preference
                android:key="install_key_certificate"
                android:title="@string/install_key_certificate"/>
        <Preference
                android:key="remove_key_certificate"
                android:title="@string/remove_key_certificate"/>
        <EditTextPreference
                android:key="override_key_selection"
                android:title="@string/key_override_alias"/>
        <Preference
                android:key="install_ca_certificate"
                android:title="@string/install_ca_certificate"/>
        <Preference
                android:key="get_ca_certificates"
                android:title="@string/get_ca_certificates"/>
        <Preference
                android:key="remove_all_ca_certificates"
                android:title="@string/remove_all_ca_certificates"/>
        <Preference
                android:key="manage_cert_installer"
                android:title="@string/manage_cert_installer"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/data_usage">
        <Preference
                android:key="network_stats"
                android:title="@string/network_stats"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/wifi_management_title">
        <Preference
                android:key="create_wifi_configuration"
                android:title="@string/create_wifi_configuration"/>
        <SwitchPreference
                android:key="enable_wifi_config_lockdown"
                android:title="@string/enable_wifi_config_lockdown"/>
        <Preference
                android:key="modify_wifi_configuration"
                android:title="@string/modify_wifi_configuration"/>
        <Preference
                android:key="show_wifi_mac_address"
                android:title="@string/show_wifi_mac_address"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/input_methods_title">
        <Preference
                android:key="set_input_methods"
                android:title="@string/set_input_methods"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:key="keyguard_preferences"
            android:title="@string/keyguard_features">
        <SwitchPreference
                android:key="keyguard_disable_widgets"
                android:title="@string/keyguard_disable_widgets"/>
        <SwitchPreference
                android:key="keyguard_disable_secure_camera"
                android:title="@string/keyguard_disable_secure_camera"/>
        <SwitchPreference
                android:key="keyguard_disable_secure_notifications"
                android:title="@string/keyguard_disable_secure_notifications"/>
        <SwitchPreference
                android:key="keyguard_disable_unredacted_notifications"
                android:title="@string/keyguard_disable_unredacted_notifications"/>
        <SwitchPreference
                android:key="keyguard_disable_trust_agents"
                android:title="@string/keyguard_disable_trust_agents"/>
        <SwitchPreference
                android:key="keyguard_disable_fingerprint"
                android:title="@string/keyguard_disable_fingerprint"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/lock_category" >
        <EditTextPreference
                android:key="key_max_time_screen_lock"
                android:title="@string/maximum_lock_time"
                android:dialogTitle="@string/maximum_lock_time"
                android:inputType="number"
                android:defaultValue="0" />
        <EditTextPreference
                android:key="key_max_fails_before_wipe"
                android:title="@string/maximum_password_fails"
                android:dialogTitle="@string/maximum_password_fails"
                android:inputType="number"
                android:defaultValue="0" />
        <EditTextPreference
                android:key="key_lock_screen_message"
                android:title="@string/lock_screen_message"
                android:dialogTitle="@string/lock_screen_message"
                android:inputType="text"
                android:defaultValue="" />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/lock_task_title">
        <Preference
                android:key="manage_lock_task"
                android:title="@string/manage_lock_task"/>
        <Preference
                android:key="check_lock_task_permitted"
                android:title="@string/check_lock_task_permitted"/>
        <Preference
                android:key="start_lock_task"
                android:title="@string/start_lock_task"/>
        <Preference
                android:key="stop_lock_task"
                android:title="@string/stop_lock_task"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/managed_profile_specific_policy_category_title">
        <Preference
                android:key="managed_profile_policies"
                android:title="@string/managed_profile_specific_policy_title"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/permission_management">
        <Preference
                android:key="set_permission_policy"
                android:title="@string/set_default_permission_policy"/>
        <Preference
                android:key="manage_app_permissions"
                android:title="@string/manage_app_permissions"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/single_use_devices">
        <Preference
                android:key="disable_status_bar"
                android:title="@string/disable_status_bar"/>
        <Preference
                android:key="reenable_status_bar"
                android:title="@string/reenable_status_bar"/>
        <Preference
                android:key="disable_keyguard"
                android:title="@string/disable_keyguard"/>
        <Preference
                android:key="reenable_keyguard"
                android:title="@string/reenable_keyguard"/>
        <Preference
                android:key="start_kiosk_mode"
                android:title="@string/start_kiosk_mode"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/system_update_management">
        <Preference
                android:key="system_update_policy"
                android:title="@string/system_update_policy"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/user_management">
        <Preference
                android:key="create_and_initialize_user"
                android:title="@string/create_and_initialize_user"/>
        <Preference
                android:key="remove_user"
                android:title="@string/remove_user"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/user_restrictions_management_title">
        <Preference
                android:key="set_user_restrictions"
                android:title="@string/user_restrictions_preference_title" />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/settings_management_title">
        <SwitchPreference
                android:key="stay_on_while_plugged_in"
                android:title="@string/stay_on_while_plugged_in"/>
        <SwitchPreference
                android:key="install_nonmarket_apps"
                android:title="@string/install_non_market_apps" />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/device_owner_management">
        <Preference
                android:key="wipe_data"
                android:title="@string/wipe_data"/>
        <Preference
                android:key="remove_device_owner"
                android:title="@string/remove_device_owner"/>
        <Preference
                android:key="reboot"
                android:title="@string/reboot"/>
    </PreferenceCategory>
</PreferenceScreen>
