<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (C) 2016 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/password_expiration">
        <EditTextPreference
                android:title="@string/password_expiration_seconds"
                android:key="password_expiration_time"
                android:inputType="number"/>

        <!-- Not a real preference- shows the aggregate password expiration time for all admins. -->
        <Preference
                android:title="@string/password_expiration_aggregate"
                android:key="password_expiration_aggregate"
                android:selectable="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/password_constraints">
        <ListPreference
                android:title="@string/minimum_password_quality"
                android:key="minimum_password_quality"/>
        <EditTextPreference
                android:title="@string/password_min_length"
                android:key="password_min_length"
                android:inputType="number"/>
        <EditTextPreference
                android:title="@string/password_min_letters"
                android:key="password_min_letters"
                android:inputType="number"/>
        <EditTextPreference
                android:title="@string/password_min_numeric"
                android:key="password_min_numeric"
                android:inputType="number"/>
        <EditTextPreference
                android:title="@string/password_min_lowercase"
                android:key="password_min_lowercase"
                android:inputType="number"/>
        <EditTextPreference
                android:title="@string/password_min_uppercase"
                android:key="password_min_uppercase"
                android:inputType="number"/>
        <EditTextPreference
                android:title="@string/password_min_symbols"
                android:key="password_min_symbols"
                android:inputType="number"/>
        <EditTextPreference
                android:title="@string/password_min_nonletter"
                android:key="password_min_nonletter"
                android:inputType="number"/>
    </PreferenceCategory>
</PreferenceScreen>
