<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (C) 2018 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="15dip">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/certificate_alias_prompt_certificate_name"/>

    <EditText
            android:id="@+id/alias_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:inputType="text"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_selectability_description"/>

    <CheckBox
        android:id="@+id/alias_user_selectable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_selectability_checkbox"/>

    <CheckBox
        android:id="@+id/generate_ec_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ec_key_checkbox"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/key_attestation_description"/>

    <CheckBox
        android:id="@+id/include_key_attestation_challenge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/key_attestation_checkbox"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_id_attestation_description"/>

    <CheckBox
        android:id="@+id/include_device_brand_attestation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/brand_attestation_checkbox"/>

    <CheckBox
        android:id="@+id/include_device_serial_in_attestation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/serial_num_attestation_checkbox"/>

    <CheckBox
        android:id="@+id/include_device_imei_in_attestation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imei_attestation_checkbox"/>

    <CheckBox
        android:id="@+id/include_device_meid_in_attestation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meid_attestation_checkbox"/>

    <CheckBox
        android:id="@+id/use_strongbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_strongbox_checkbox"/>

</LinearLayout>
